--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.9'
 
 services:
-  db:
+  postgres:
     image: postgres:13
     restart: always
     environment:
@@ -21,6 +21,7 @@ services:
       - db
     ports:
       - "8000:80"
-
+    environment:
+      - DATABASE_URL= "postgres://admin:1234@db:5432/db_modelos"
 volumes:
   postgres_data:
