--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     build: .
     restart: always
     depends_on:
-      - db
+      - postgres
     ports:
       - "8000:80"
     environment:
